[project]
name = "dtai-parallel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arjun Guha", email = "a.guha@northeastern.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "pytest>=9.0.3",
    "torch>=2.12.0",
]

[project.scripts]
dtai-parallel = "dtai_parallel:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "transformers>=4.43.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = ["old0", "old1"]
markers = [
    "cuda: tests that require CUDA devices",
    "slow: long-running tests",
]
